--- a/main.html
+++ b/main.html
@@ -9,6 +9,53 @@
 </head>
 <body>
     <!-- add table here -->
+	<table>
+		<thead id = "heading-1">
+			<th class = "name">NAME</th>
+			<th class = "kill">KILLS</th>
+			<th class = "saved">SAVED</th>
+			<th class = "deaths">DEATHS</th>
+			<th class = "revive">REVIVES</th>
+			<th class = "win">WIN</th>
+		</thead>
+		<tbody>
+			<tr>
+				<td class = "name">Hackerman</td>
+				<td class = "kill">10</td>
+				<td class = "saved">0</td>
+				<td class = "deaths">1</td>
+				<td class = "revive">0</td>
+				<td class = "win">0</td>
+			</tr>
+
+			<tr>
+				<td class = "name">Hackerman</td>
+				<td class = "kill">10</td>
+				<td class = "saved">0</td>
+				<td class = "deaths">1</td>
+				<td class = "revive">0</td>
+				<td class = "win">0</td>
+			</tr>
+
+			<tr>
+				<td class = "name">Hackerman</td>
+				<td class = "kill">10</td>
+				<td class = "saved">0</td>
+				<td class = "saved">1</td>
+				<td class = "deaths">0</td>
+				<td class = "win">0</td>
+			</tr>
+
+			<tr>
+				<td class = "name">Hackerman</td>
+				<td class = "kill">10</td>
+				<td class = "saved">0</td>
+				<td class = "deaths">1</td>
+				<td class = "revive">0</td>
+				<td class = "win">0</td>
+			</tr>
+		</tbody>
+	</table>
 
         
 </body>
